13-Ingress-ExternalDNS-Domain-Name-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-DomainName-Based-Routing-app1-2-3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app1-app2-app3
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:                                
  - host: eapp1.benighil-mohamed.com
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: app1-nginx-clusterip-service
              port:
                number: 80
          path: /
  - host: eapp2.benighil-mohamed.com  
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: app2-nginx-clusterip-service
              port:
                number: 80
          path: /
  - host: eapp3.benighil-mohamed.com 
    http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: usermgmt-webapp-clusterip-service
              port:
                number: 80
          path: /
